# MyTemplate

./: .aliases.sh  .antigen-conf.sh  .env-vars.sh  .gitignore  .sh-aliases  .sh-antigen  .sh-env.vars  CMakeLists.txt  ConcurrentTesting.py  HowToInstallArchInWsl.md  HowToUseGprof.md  HowToUsePerf.md  LICENSE.txt  Misc.h  ParallelPy.py  ParallelShell.sh  README.md  build.gradle  main.c  main.cpp  txz.py  update.sh
.cargo/: config
.github/workflows/: rust-release.yml
CMakeArgs/: !main.cmake  Asan.cmake  CMakeLists.txt  LsanStandalone.cmake  MoreArgs.cmake  Msan.cmake  Tsan.cmake  Ubsan.cmake
app/: build.gradle  proguard-rules.pro
app/src/main/java/io/jerryc05/my_template/ui/: MyApp.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
cmake-args/: !main.cmake  add-sanitizer-options.cmake  asan.cmake  cfisan.cmake  latest-std.cmake  lsan-standalone.cmake  msan.cmake  sanitizer-options.cpp  static-analyzer.cmake  tsan.cmake  ubsan.cmake
gradle/wrapper/: gradle-wrapper.properties
src/: main.rs  utils.rs
src/utils/: mod.rs  my_err.rs
utils/: env-settings.hpp  logger.hpp
